# sqlite-vector

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTES  README.md  docs.md  test.sql
.github/workflows/: release.yaml  test.yaml  upload.js
include/: vectors.h
python/: README.md
python/datasette_sqlite_vector/: README.md  setup.py
python/sqlite_vector/: setup.py
python/sqlite_vector/sqlite_vector/: __init__.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: extension.cpp  sqlite-vector.h.in
tests/: test-loadable.py  test-python.py
